crates/cadenza-syntax/src/snapshots/cadenza_syntax__lexer__tests__multiple_floats.snap
---
source: crates/cadenza-syntax/src/lexer.rs
expression: "lex(\"1.2 2.4 5.6\")"
---
[
    Token {
        span: Span {
            start: 0,
            end: 3,
        },
        kind: Float,
    },
    Token {
        span: Span {
            start: 3,
            end: 4,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 4,
            end: 7,
        },
        kind: Float,
    },
    Token {
        span: Span {
            start: 7,
            end: 8,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 8,
            end: 11,
        },
        kind: Float,
    },
]
